# rag-forge

./: pyproject.toml  requirements.txt
docs/: docs.excalidraw
normal_rag/notebooks/: document.ipynb  pdf_loader.ipynb
vector_db/: chroma.sqlite3
